# datalad-container

./: .appveyor.yml  .autorc  .codespellrc  .datalad-release-action.yaml  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS  MANIFEST.in  Makefile  README.md  containers_add_dhub_tags.py  pyproject.toml  requirements-devel.txt  requirements.txt  setup.cfg  setup.py  setup_support.py  versioneer.py
.datalad/: config
.github/: dependabot.yml
.github/workflows/: add-changelog-snippet.yml  docbuild.yml  release.yml  test_crippledfs.yml
_datalad_buildsupport/: formatters.py  setup.py
changelog.d/: 20230307_164111_austin_add_metalad_extractor.md  20231009_185242_michael.hanke_noexe.md  20240117_164953_yarikoptic.md  pr-186.md  pr-188.md  pr-190.md  pr-192.md  pr-193.md  pr-201.md  pr-203.md  pr-205.md  pr-206.md  pr-207.md  pr-208.md  pr-209.md  pr-215.md  pr-217.md  pr-221.md  pr-268.md  pr-277.md  pr-278.md  pr-279.md  scriv.ini
changelog.d/templates/: new_fragment.md.j2
datalad_container/: __init__.py  _version.py  conftest.py  containers.py  containers_add.py  containers_list.py  containers_remove.py  containers_run.py  definitions.py  find_container.py  utils.py
datalad_container/adapters/: docker.py  manifestutils.py  oci.py  utils.py
datalad_container/adapters/tests/: test_docker.py  test_oci.py  test_oci_more.py
datalad_container/extractors/: _load_singularity_versions.py  metalad_container.py
datalad_container/extractors/tests/: test_metalad_container.py
datalad_container/resources/procedures/: cfg_containers.py
datalad_container/tests/: test_add.py  test_containers.py  test_find.py  test_register.py  test_run.py  test_schemes.py  test_utils.py  utils.py
datalad_container/tests/fixtures/: __init__.py  singularity_image.py
datalad_helloworld/: __init__.py
debian/: changelog  control  copyright  gbp.conf  rules  watch
debian/patches/: changeset_bf-skip-no-net.diff  series
debian/source/: options
docs/: Makefile
docs/examples/: basic_demo.sh
docs/source/: changelog.rst  conf.py  index.rst  metadata-extraction.rst  modref.rst
test/: .gitignore  run.sh
tools/: Singularity.testhelper  containers_add_dhub_tags.py  mk_minimal_chroot.sh
tools/ci/: install-singularity.sh  prep-travis-forssh.sh
