[metadata]
url = https://github.com/datalad/datalad-container
author = The DataLad Team and Contributors
author_email = team@datalad.org
description = DataLad extension package for working with containerized environments
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.7
install_requires =
    datalad >= 0.18.0
    requests>=1.2  # to talk to Singularity-hub
packages = find:
include_package_data = True

[options.extras_require]
extras =
    datalad-metalad
# this matches the name used by -core and what is expected by some CI setups
devel =
    %(extras)s
    pytest
    pytest-cov
    coverage
    sphinx
    sphinx-rtd-theme
    sphinx-copybutton

[options.packages.find]
# do not ship the build helpers
exclude=
    _datalad_buildsupport

[options.entry_points]
# 'datalad.extensions' is THE entrypoint inspected by the datalad API builders
datalad.extensions =
    # the label in front of '=' is the command suite label
    # the entrypoint can point to any symbol of any name, as long it is
    # valid datalad interface specification (see demo in this extensions)
    container = datalad_container:command_suite

datalad.metadata.extractors =
    container_inspect = datalad_container.extractors.metalad_container:MetaladContainerInspect

[coverage:report]
show_missing = True
omit =
    # versioneer code
    datalad_container/_version.py
